--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,2 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<h1 class="text-white">{{title}}</h1>
+<h3><p class="text-white">Welcome to {{title}}</p></h3>
